--- a/report.html
+++ b/report.html
@@ -1,3 +1,8 @@
+		<script>
+			$(function(){
+				$('#carousel-id').carousel();
+			});
+		</script>
 	<div class="container ketqua" ng-repeat="users in test|filter:query2">
 		<div class="row">
 			<div class="col-md-12 col-xs-12 title">
@@ -37,7 +42,7 @@
 				<table class="table table-striped table-responsive" align="center">
 					<tr>
 						<th class="col-xs-4">Activity</th>
-						<th class="col-xs-2">Year</th>
+						<th class="col-xs-2">Date</th>
 						<th class="col-xs-2">Responsibility</th>
 						<th class="col-xs-2">Score</th>
 						<th class="col-xs-2">Prize</th>
@@ -70,5 +75,26 @@
 					</div>
 				</div>
 				<!--</div>-->
+		</div>
+
+		<!-- Carousel -->
+		<div class="row">
+			<div id="carousel-id" class="carousel slide" data-ride="carousel" data-interval="4000">
+
+						<ol class="carousel-indicators">
+							<li data-target="#carousel-id" data-slide-to="0" class="active"></li>
+							<li data-target="#carousel-id" data-slide-to="1"></li>
+						</ol>
+
+						<div class="carousel-inner">
+							<div class="item active">
+								<img src="images/logo1.png"/>
+							</div>
+
+							<div class="item">
+								<img src="images/logo2.png"/>
+							</div>
+						</div>
+			</div>
 		</div>
 	</div>
