--- a/report.html
+++ b/report.html
@@ -40,7 +40,7 @@
 		<div class="row">
 			<div class="col-md-12 col-xs-12 bangdiem">
 				<table class="table table-hover table-responsive" align="center">
-					<tr class="danger">
+					<tr>
 						<th class="col-xs-4">Activity</th>
 						<th class="col-xs-2">Date</th>
 						<th class="col-xs-2">Responsibility</th>
@@ -58,15 +58,15 @@
 			</div>
 		</div>
 		<div class="row">
-			<!--<div class="col-md-12 col-xs-12 evaluate">
+			<div class="col-md-12 col-xs-12 evaluate">
 				<div class="row">
 					<div class="col-xs-offset-2">
-						<span>Total Extra-Curriculum Score that you have achieved is: <h1>100/100</h1></span>
+						<span>Total Extra-Curriculum Score that you have achieved is: <h1>{{users.total}}</h1></span>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-xs-offset-2">
-						<span>That is:  </span>
+						<span>That is: <h3>{{users.result}}</h3></span>
 					</div>
 				</div>-->
 				<div class="row">
@@ -74,7 +74,7 @@
 						<a href="#/"><button type="submit">Back</button></a>
 					</div>
 				</div>
-				<!--</div>-->
+				</div>
 		</div>
 
 		<!-- Carousel -->
@@ -84,6 +84,7 @@
 						<ol class="carousel-indicators">
 							<li data-target="#carousel-id" data-slide-to="0" class="active"></li>
 							<li data-target="#carousel-id" data-slide-to="1"></li>
+							<li data-target="#carousel-id" data-slide-to="2"></li>
 						</ol>
 
 						<div class="carousel-inner">
@@ -93,6 +94,10 @@
 
 							<div class="item">
 								<img src="images/logo2.png"/>
+							</div>
+
+							<div class="item">
+								<img src="images/logo3.png"/>
 							</div>
 						</div>
 			</div>
