--- a/search.html
+++ b/search.html
@@ -49,8 +49,8 @@
 		<div class="row">
 			<div class="form-group">
 				<form style="font-size: 30px;">
-					<span><b>Your ID or Your Name: </b></span>
-					<input type="text" placeholder="Your ID or Your Name" ng-model="query">
+					<span><b>Your ID: </b></span>
+					<input type="text" placeholder="Your ID" ng-model="query">
 					<a href="#result/{{query}}"><button class="btn btn-danger btn-lg" type="submit" ng-submit="getId()">Submit</button></a>
 				</form>
 			</div>
